[gd_scene load_steps=7 format=3 uid="uid://0d6106vbc6ec"]

[ext_resource type="Script" path="res://Characters/Placeholder_Char/Code/life_bar.gd" id="1_r3m2p"]
[ext_resource type="StyleBox" uid="uid://c3tjudnfmsobf" path="res://Characters/Placeholder_Char/Files/life_bar_bg.tres" id="2_p37cc"]
[ext_resource type="LabelSettings" uid="uid://c5wao33a66nk4" path="res://Characters/Placeholder_Char/Files/ingame_ui.tres" id="2_rmhnw"]
[ext_resource type="StyleBox" uid="uid://ds6likupml4h6" path="res://Characters/Placeholder_Char/Files/life_bar_top.tres" id="3_4e057"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gm6c6"]
bg_color = Color(0.282353, 0.439216, 0.803922, 1)

[sub_resource type="LabelSettings" id="LabelSettings_r3vye"]
font_size = 20

[node name="ingame_ui" type="Node2D"]
script = ExtResource("1_r3m2p")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 5.0
offset_top = 59.0
offset_right = 300.0
offset_bottom = 103.0
color = Color(0.67451, 0.937255, 0.933333, 0.2)

[node name="Life_bar" type="ProgressBar" parent="."]
offset_left = 30.0
offset_top = 527.0
offset_right = 581.0
offset_bottom = 554.0
theme_override_styles/background = ExtResource("2_p37cc")
theme_override_styles/fill = ExtResource("3_4e057")
show_percentage = false

[node name="ShieldBar" type="ProgressBar" parent="."]
offset_left = 591.0
offset_top = 527.0
offset_right = 811.0
offset_bottom = 555.0
theme_override_styles/background = ExtResource("2_p37cc")
theme_override_styles/fill = SubResource("StyleBoxFlat_gm6c6")
max_value = 50.0
show_percentage = false

[node name="ShieldLabel" type="Label" parent="."]
offset_left = 590.0
offset_top = 525.0
offset_right = 820.0
offset_bottom = 560.0
text = "hp text"
label_settings = SubResource("LabelSettings_r3vye")

[node name="HpLabel" type="Label" parent="."]
offset_left = 34.0
offset_top = 525.0
offset_right = 578.0
offset_bottom = 560.0
text = "hp text"
label_settings = SubResource("LabelSettings_r3vye")

[node name="Name" type="Label" parent="."]
offset_left = 47.0
offset_top = 55.0
offset_right = 298.0
offset_bottom = 110.0
label_settings = ExtResource("2_rmhnw")
